# earth-osm

./: .gitignore  404.html  CONTRIBUTING.md  Containerfile  HISTORICAL_FEATURE_SUMMARY.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements-gui.txt  requirements-test.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs-ci.yml  main.yml  release.yml
.streamlit/: config.toml
api-docs/: index.html
api-docs/args/: index.html
api-docs/clean/: index.html
api-docs/config/: index.html
api-docs/eo/: index.html
api-docs/export/: index.html
api-docs/extract/: index.html
api-docs/filter/: index.html
api-docs/gfk_data/: index.html
api-docs/gfk_download/: index.html
api-docs/osmpbf/: index.html
api-docs/tagdata/: index.html
api-docs/taginfo/: index.html
api-docs/utils/: index.html
docs/: index.md  regions.md
docs/api-docs/: README.md  args.md  clean.md  config.md  eo.md  export.md  extract.md  filter.md  gfk_data.md  gfk_download.md  osmpbf.md  tagdata.md  taginfo.md  utils.md
docs/generated-docs/: regions_table.md
docs/generated-examples/: README.md  monaco_power_example.md
docs/user-guide/: advanced-examples.md  basic-usage.md  getting-started.md  visualization.md
earth_osm/: VERSION  __init__.py  __main__.py  args.py  backends.py  clean.py  config.py  eo.py  export.py  extract.py  filter.py  frontend.py  gfk_data.py  gfk_download.py  overpass.py  planet.py  regions.py  stream.py  tagdata.py  taginfo.py  utils.py
earth_osm/data/: earth_data.json  gfk_index.csv
earth_osm/osmpbf/: README.md  __init__.py  file.py  fileformat_pb2.py  osmformat_pb2.py
generated-docs/regions_table/: index.html
osm_data_test/pbf/: benin-latest.osm.pbf.md5  (+2 more)
regions/: index.html
scripts/: create_visualization_examples.py  generate_docs_examples.py  quick_visualizations.py
search/: search_index.json
tests/: conftest.py  test_buildings.py  test_eo.py  test_error_handling.py  test_export.py  test_gfk_data.py  test_gfk_download.py  test_historical_download.py  test_melt_explode.py  test_osmium.py  test_overpass.py  test_planet.py  test_power.py  test_pypsa_tutorial.py
(+2 files in other folders)
